require 'cucumber/messages'

class CucumberDemoFormatter
  def process_messages(input, output)
    message_enumerator = Cucumber::Messages::ProtobufIoEnumerator.call(input)
    message_enumerator.each do |message|
      if message.testStepFinished
        output.write({
          UNKNOWN:   'ğŸ‘½',
          PASSED:    'ğŸ˜ƒ',
          SKIPPED:   'ğŸ¥¶',
          PENDING:   'â°',
          UNDEFINED: 'ğŸ¤·',
          AMBIGUOUS: 'ğŸ¦„',
          FAILED:    'ğŸ’£',
        }[message.testStepFinished.testResult.status])
      end
      if message.testRunFinished
        output.write("\n")
      end
    end
  end
end